<resources>
    <string name="app_name">F1 Companion</string>
    <string name="appwidget_text">EXAMPLE</string>

    <!-- Widget Calendar Medium -->
    <string name="appwidget_race_num_ex">R15</string>
    <string name="appwidget_filler">&#160;–&#160;</string>
    <string name="appwidget_race_locality_ex">Zandvoort</string>
    <string name="appwidget_race_we_date_ex">02–04</string>
    <string name="appwidget_race_we_month_ex">SEPT</string>
    <string name="appwidget_race_we_month_ex_bis">&#160;SEPT</string>

    <string name="appwidget_race_first_session_ex">FP1</string>
    <string name="appwidget_race_first_session_day_ex">FRI</string>
    <string name="appwidget_race_first_session_hour_ex">12:00</string>

    <string name="appwidget_race_second_session_ex">FP2</string>
    <string name="appwidget_race_second_session_day_ex">FRI</string>
    <string name="appwidget_race_second_session_hour_ex">15:00</string>

    <string name="appwidget_race_third_session_ex">FP3</string>
    <string name="appwidget_race_third_session_day_ex">SAT</string>
    <string name="appwidget_race_third_session_hour_ex">11:00</string>

    <string name="appwidget_race_fourth_session_ex">Q1</string>
    <string name="appwidget_race_fourth_session_day_ex">SAT</string>
    <string name="appwidget_race_fourth_session_hour_ex">14:00</string>

    <string name="appwidget_race_session_ex">Race</string>
    <string name="appwidget_race_session_day_ex">SUN</string>
    <string name="appwidget_race_session_hour_ex">13:00</string>

    <string name="fp1">FP1</string>
    <string name="fp2">FP2</string>
    <string name="fp3">FP3</string>
    <string name="q1">Q1</string>

    <!-- Widget Calendar Medium -->
    <string name="appwidget_lights_out">Lights out in</string>
    <string name="appwidget_days_remaining">5 days, 14 hrs</string>
    <string name="appwidget_gp_name">Dutch Grand Prix</string>
    <string name="appwidget_circuit_name">Circuit Park Zandvoort</string>

    <!-- Widget Calendar Medium -->
    <string name="appwidget_race_full_date">2022-05-08</string>


    <!-- Main activity -->
    <string name="main_activity_title">Widgets</string>
    <string name="main_activity_description">Preview list of all available widgets:</string>
    <string name="main_activity_widget_medium_calendar_title">Medium Calendar Widget</string>
    <string name="main_activity_widget_small_calendar_title">Small Calendar Widget</string>
    <string name="main_activity_widget_one_line_calendar_title">One Line Calendar Widget</string>
    <string name="main_activity_widget_constructor_standings_title">Constructor Standings Widget</string>
    <string name="main_activity_widget_driver_standings_title">Top 10 Driver Standings Widget</string>

    <string name="main_activity_how_to_install_title">How To:</string>
    <string name="main_activity_how_to_install_step_1"><b>1-</b>  On your Home screen, touch and hold an empty space</string>
    <string name="main_activity_how_to_install_step_2"><b>2-</b>  Select the widget option</string>
    <string name="main_activity_how_to_install_step_3"><b>3-</b>  Touch and hold a widget. You’ll get images of your Home screens</string>
    <string name="main_activity_how_to_install_step_4"><b>4-</b>  Slide the widget to where you want it. Lift your finger</string>
    <string name="main_activity_how_to_install_step_5"><b>5-</b>  Enjoy !</string>

    <string name="action_info">App info</string>

    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This widget displays main info of the next F1 race</string>
    <string name="app_widget_constructor_standings_description">This widget displays the constructor standings of the current season</string>
    <string name="app_widget_driver_standings_description">This widget displays the top 10 driver standings of the current season</string>

    <!-- Info Activity -->
    <string name="info_activity_title">Information</string>
    <string name="info_activity_about_section_title">About F1 Companion</string>
    <string name="info_activity_about_section_text">This non-commercial application allows you to have widgets summarizing the main information of the current F1 season (next race, teams ranking, ...).\nEach widget is refreshed only once an hour, and all the data used are retrieved from "Ergast API" <a href="https://ergast.com/mrd/">(https://ergast.com/mrd)</a>.\n\nThis application is, and will always be, completely free and ad-free. \nHowever, you can support us and help development of this app by making a donation (see link in our Twitter bio)</string>
    <string name="info_activity_app_version">App version</string>
    <string name="textview_info_activity_contact_title">Contact</string>
    <string name="textview_info_activity_contact_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean eget ipsum mattis, posuere dui eget, mattis nulla. Cras sit amet elit ac justo rhoncus tempor. Quisque mattis nulla ante, at vulputate lacus porta non. Nam et risus tincidunt, elementum turpis sit amet, convallis odio. Aliquam tincidunt rhoncus vehicula. Donec libero nunc, aliquet at metus at, volutpat varius turpis. Phasellus enim mauris, ornare sit amet dolor et, scelerisque interdum augue.</string>
    <string name="button_twitter">&#160;F1Companion</string>


    <!-- Constructor Standings -->
    <string name="appwidget_constructor_standings_first_ex">1</string>
    <string name="appwidget_constructor_standings_first_team_ex">Ferrari</string>
    <string name="appwidget_constructor_standings_first_points_ex">124 PTS</string>

    <string name="appwidget_constructor_standings_second_ex">2</string>
    <string name="appwidget_constructor_standings_second_team_ex">Red Bull</string>
    <string name="appwidget_constructor_standings_second_points_ex">113 PTS</string>

    <string name="appwidget_constructor_standings_third_ex">3</string>
    <string name="appwidget_constructor_standings_third_team_ex">Mercedes</string>
    <string name="appwidget_constructor_standings_third_points_ex">77 PTS</string>

    <string name="appwidget_constructor_standings_fourth_ex">4</string>
    <string name="appwidget_constructor_standings_fourth_team_ex">McLaren</string>
    <string name="appwidget_constructor_standings_fourth_points_ex">46 PTS</string>

    <string name="appwidget_constructor_standings_fifth_ex">5</string>
    <string name="appwidget_constructor_standings_fifth_team_ex">Alfa Romeo</string>
    <string name="appwidget_constructor_standings_fifth_points_ex">25 PTS</string>

    <string name="appwidget_constructor_standings_sixth_ex">6</string>
    <string name="appwidget_constructor_standings_sixth_team_ex">Alpine F1 Team</string>
    <string name="appwidget_constructor_standings_sixth_points_ex">22 PTS</string>

    <string name="appwidget_constructor_standings_seventh_ex">7</string>
    <string name="appwidget_constructor_standings_seventh_team_ex">AlphaTauri</string>
    <string name="appwidget_constructor_standings_seventh_points_ex">16 PTS</string>

    <string name="appwidget_constructor_standings_eighth_ex">8</string>
    <string name="appwidget_constructor_standings_eighth_team_ex">Haas F1 Team</string>
    <string name="appwidget_constructor_standings_eighth_points_ex">15 PTS</string>

    <string name="appwidget_constructor_standings_ninth_ex">9</string>
    <string name="appwidget_constructor_standings_ninth_team_ex">Aston Martin</string>
    <string name="appwidget_constructor_standings_ninth_points_ex">5 PTS</string>

    <string name="appwidget_constructor_standings_tenth_ex">10</string>
    <string name="appwidget_constructor_standings_tenth_team_ex">Williams</string>
    <string name="appwidget_constructor_standings_tenth_points_ex">1 PTS</string>

    <!-- Driver Standings -->
    <string name="appwidget_driver_standings_first_ex">1</string>
    <string name="appwidget_driver_standings_first_firstname_ex">Charles&#160;</string>
    <string name="appwidget_driver_standings_first_lastname_ex">LECLERC</string>
    <string name="appwidget_driver_standings_first_points_ex">86 PTS</string>

    <string name="appwidget_driver_standings_second_ex">2</string>
    <string name="appwidget_driver_standings_second_firstname_ex">Max&#160;</string>
    <string name="appwidget_driver_standings_second_lastname_ex">VERSTAPPEN</string>
    <string name="appwidget_driver_standings_second_points_ex">59 PTS</string>

    <string name="appwidget_driver_standings_third_ex">3</string>
    <string name="appwidget_driver_standings_third_firstname_ex">Sergio&#160;</string>
    <string name="appwidget_driver_standings_third_lastname_ex">PEREZ</string>
    <string name="appwidget_driver_standings_third_points_ex">54 PTS</string>

    <string name="appwidget_driver_standings_fourth_ex">4</string>
    <string name="appwidget_driver_standings_fourth_firstname_ex">George&#160;</string>
    <string name="appwidget_driver_standings_fourth_lastname_ex">RUSSEL</string>
    <string name="appwidget_driver_standings_fourth_points_ex">49 PTS</string>

    <string name="appwidget_driver_standings_fifth_ex">5</string>
    <string name="appwidget_driver_standings_fifth_firstname_ex">Carlos&#160;</string>
    <string name="appwidget_driver_standings_fifth_lastname_ex">SAINZ</string>
    <string name="appwidget_driver_standings_fifth_points_ex">38 PTS</string>

    <string name="appwidget_driver_standings_sixth_ex">6</string>
    <string name="appwidget_driver_standings_sixth_firstname_ex">Lando&#160;</string>
    <string name="appwidget_driver_standings_sixth_lastname_ex">NORRIS</string>
    <string name="appwidget_driver_standings_sixth_points_ex">35 PTS</string>

    <string name="appwidget_driver_standings_seventh_ex">7</string>
    <string name="appwidget_driver_standings_seventh_firstname_ex">Lewis&#160;</string>
    <string name="appwidget_driver_standings_seventh_lastname_ex">HAMILTON</string>
    <string name="appwidget_driver_standings_seventh_points_ex">28 PTS</string>

    <string name="appwidget_driver_standings_eighth_ex">8</string>
    <string name="appwidget_driver_standings_eighth_firstname_ex">Valtteri&#160;</string>
    <string name="appwidget_driver_standings_eighth_lastname_ex">BOTTAS</string>
    <string name="appwidget_driver_standings_eighth_points_ex">24 PTS</string>

    <string name="appwidget_driver_standings_ninth_ex">9</string>
    <string name="appwidget_driver_standings_ninth_firstname_ex">Esteban&#160;</string>
    <string name="appwidget_driver_standings_ninth_lastname_ex">OCON</string>
    <string name="appwidget_driver_standings_ninth_points_ex">20 PTS</string>

    <string name="appwidget_driver_standings_tenth_ex">10</string>
    <string name="appwidget_driver_standings_tenth_firstname_ex">Kevin&#160;</string>
    <string name="appwidget_driver_standings_tenth_lastname_ex">MAGNUSSEN</string>
    <string name="appwidget_driver_standings_tenth_points_ex">15 PTS</string>
</resources>