<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/Widget.F1Companion.AppWidget.Container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.F1Companion.AppWidgetContainer"
    android:gravity="center"
    android:id="@+id/layout_small_calendar_parent"
    >

    <LinearLayout
        android:id="@+id/layout_small_calendar"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:weightSum="4">

        <LinearLayout
            android:id="@+id/layout_small_calendar_weekend_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="start|top"
            android:layout_weight="1">
<!--
            <TextView
                android:id="@+id/textview_small_calendar_race_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/appwidget_race_num_ex"
                android:text="@string/appwidget_race_num_ex"
                android:textColor="@color/formula_red"
                android:textSize="@dimen/widget_text_size_1"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textview_small_calendar_filler"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/appwidget_filler"
                android:text="@string/appwidget_filler"
                android:textColor="@color/formula_red"
                android:textSize="@dimen/widget_text_size_1"
                android:textStyle="bold" />
-->
            <TextView
                android:id="@+id/textview_small_calendar_race_locality"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/appwidget_race_locality_ex"
                android:text="@string/appwidget_race_locality_ex"
                android:textColor="@color/formula_red"
                android:textSize="@dimen/widget_text_size_1"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_small_calendar_we_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start|center"
            android:orientation="horizontal"
            android:layout_weight="1"
            >
            <TextView
                android:id="@+id/textview_small_calendar_weekend_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/appwidget_race_we_date_ex"
                android:text="@string/appwidget_race_we_date_ex"
                android:textSize="@dimen/widget_text_size_1"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/textview_small_calendar_race_month"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/appwidget_race_we_month_ex_bis"
                android:text="@string/appwidget_race_we_month_ex_bis"
                android:textSize="@dimen/widget_text_size_1"
                android:textStyle="bold"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_small_calendar_remaining"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start|center"
            android:orientation="vertical"
            android:layout_weight="1"
            >
            <TextView
                android:id="@+id/textview_small_lights_out"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/appwidget_lights_out"
                android:text="@string/appwidget_lights_out"
                android:textColor="@color/formula_red"
                android:textSize="@dimen/widget_text_size_1"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textview_small_days_remaining"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/appwidget_days_remaining"
                android:text="@string/appwidget_days_remaining"
                android:textSize="@dimen/widget_text_size_1"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_small_calendar_gp_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start|bottom"
            android:orientation="vertical"
            android:layout_weight="1"
            >
        <TextView
            android:id="@+id/textview_small_gp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/appwidget_gp_name"
            android:text="@string/appwidget_gp_name"
            android:textSize="@dimen/widget_text_size_1"/>

        <TextView
            android:id="@+id/textview_small_circuit_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/appwidget_circuit_name"
            android:text="@string/appwidget_circuit_name"
            android:textSize="@dimen/widget_text_size_2"
            android:textColor="@color/light_grey"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>